Resolve clipping bug on large screen sizes

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -248,7 +248,7 @@ Components
 	}
 
 	@include media-query($desktop) {
-    	max-width: 31%;
+    	height: 16em;
 	}
 
 	&__title{
